@@ -1,4 +1,3 @@
-Restart from bug # 3009182
 
 Stability test with valgrind must be performed
 
