@@ -20,6 +20,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -34,9 +35,10 @@ AT_DATA([monkey2d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 rollback -3], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset start case0002 rollback -3], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([TX/3.3.1/0.1])
@@ -61,6 +63,7 @@ xa_start/0
 xa_end/0
 xa_prepare/0
 xa_commit/6
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -69,6 +72,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/6
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey2d.conf],
@@ -79,7 +83,7 @@ xa_prepare/0
 xa_commit/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 commit -3], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset none case0002 commit -3], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([TX/3.3.1/1.0])
@@ -102,6 +106,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -116,9 +121,10 @@ AT_DATA([monkey2d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 rollback -4], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset none case0002 rollback -4], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([TX/3.3.1/1.1])
@@ -143,6 +149,7 @@ xa_start/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -151,6 +158,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey2d.conf],
@@ -161,7 +169,7 @@ xa_prepare/0
 xa_commit/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 commit -4], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset none case0002 commit -4], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([TX/3.3.1/2.0])
@@ -181,6 +189,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/6
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -188,6 +197,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/6
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey2d.conf],
@@ -197,7 +207,7 @@ xa_end/0
 xa_rollback/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 rollback 0], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset none case0002 rollback 0], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([TX/3.3.1/2.1])
@@ -219,6 +229,7 @@ xa_start/0
 xa_end/0
 xa_prepare/0
 xa_commit/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -227,6 +238,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey2d.conf],
@@ -237,6 +249,6 @@ xa_prepare/0
 xa_commit/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle case0002 commit 0], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset stop case0002 commit 0], [0], [ignore], [ignore])
 AT_CLEANUP
 
