@@ -92,6 +92,7 @@ xa_start/0
 xa_end/0
 xa_prepare/0
 xa_commit/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -100,6 +101,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/6
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0016 0 -3], [0], [ignore], [ignore])
@@ -118,6 +120,7 @@ xa_start/0
 xa_end/0
 xa_prepare/0
 xa_commit/7
+xa_forget/0
 xa_start/-3
 xa_close/0
 ]])
@@ -127,6 +130,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/6
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0016 1 -103], [0], [ignore], [ignore])
@@ -152,6 +156,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0016 0 -4], [0], [ignore], [ignore])
@@ -179,6 +184,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0016 1 -104], [0], [ignore], [ignore])
