@@ -996,6 +996,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/5
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 0 -3], [0], [ignore], [ignore])
@@ -1019,6 +1020,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/5
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 1 -3], [0], [ignore], [ignore])
@@ -1041,6 +1043,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 0 -4], [0], [ignore], [ignore])
@@ -1064,6 +1067,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 1 -4], [0], [ignore], [ignore])
@@ -1132,6 +1136,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/5
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 1 -103], [0], [ignore], [ignore])
@@ -1155,6 +1160,7 @@ xa_open/0
 xa_end/0
 xa_prepare/0
 xa_commit/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 1 1 -104], [0], [ignore], [ignore])
@@ -1209,6 +1215,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -1216,6 +1223,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 0 -9], [0], [ignore], [ignore])
@@ -1229,6 +1237,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_start/0
 xa_close/0
 ]])
@@ -1237,6 +1246,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 1 -9], [0], [ignore], [ignore])
@@ -1257,6 +1267,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 0 -3], [0], [ignore], [ignore])
@@ -1278,6 +1289,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 1 -3], [0], [ignore], [ignore])
@@ -1298,6 +1310,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 0 -4], [0], [ignore], [ignore])
@@ -1319,6 +1332,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 1 -4], [0], [ignore], [ignore])
@@ -1353,6 +1367,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_start/-3
 xa_close/0
 ]])
@@ -1361,6 +1376,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 1 -109], [0], [ignore], [ignore])
@@ -1382,6 +1398,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0021 0 1 -103], [0], [ignore], [ignore])
@@ -1403,6 +1420,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset stop case0021 0 1 -104], [0], [ignore], [ignore])
